--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -70,8 +70,7 @@
               alt="Team Member 1"
               width="264"
               height="260"
-            >
-
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -81,7 +80,7 @@
               alt="Team Member 2"
               width="264"
               height="260"
-            >
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -91,7 +90,7 @@
               alt="Team Member 3"
               width="264"
               height="260"
-            >
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -101,9 +100,74 @@
               alt="Team Member 4"
               width="264"
               height="260"
-            >
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images\bankingapp.jpg"
+              alt="bankingapp"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images\cashlesspayment.jpg"
+              alt="cashlesspayment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images\meditationapp.jpg"
+              alt="meditationapp"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images\taxiservice.jpg"
+              alt="taxiservice"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images\screenillustrations.jpg"
+              alt="screenillustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images\onlinecourses.jpg"
+              alt="onlinecourses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
