--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               height="260"
             />
             <h3 class="team-member">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="position">Product Designer</p>
           </li>
           <li>
             <img
@@ -101,7 +101,7 @@
               height="260"
             />
             <h3 class="team-member">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -111,7 +111,7 @@
               height="260"
             />
             <h3 class="team-member">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img
@@ -121,7 +121,7 @@
               height="260"
             />
             <h3 class="team-member">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-description">App</p>
           </li>
           <li>
             <img
@@ -145,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -155,8 +155,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-description">App</p>
           </li>
           <li>
             <img
@@ -165,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -175,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-description">Design</p>
           </li>
           <li>
             <img
@@ -185,8 +185,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
         </ul>
       </section>
@@ -195,7 +195,7 @@
       <a href="./index.html" class="logo"
         >Web<span class="logo-blue">Studio</span></a
       >
-      <p>
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
