--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
   </head>
   <body class="body">
     <header class="header">
-      <nav>
+      <nav class="nav">
         <a class="logo" href="./index.html"
           >Web<span class="logo-blue">Studio</span></a
         >
         <ul>
-          <li class="nav-list"><a href="#" class="nav">Studio</a></li>
-          <li class="nav-list"><a href="#" class="nav">Portfolio</a></li>
-          <li class="nav-list"><a href="#" class="nav">Contacts</a></li>
+          <li class="nav-list">
+            <a href="./index.html" class="nav">Studio</a>
+          </li>
+          <li class="nav-list"><a href=" " class="nav">Portfolio</a></li>
+          <li class="nav-list"><a href=" " class="nav">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li class="contacts-list">
             <a href="mailto:info@devstudio.com" class="contacts"
@@ -47,7 +49,7 @@
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="features">
         <h2 class="main-title-section">Our Features</h2>
         <ul>
           <li class="section1-list">
@@ -130,7 +132,7 @@
         <ul>
           <li>
             <img
-              src="./images\bankingapp.jpg"
+              src="./images/bankingapp.jpg"
               alt="bankingapp"
               width="360"
               height="300"
@@ -140,7 +142,7 @@
           </li>
           <li>
             <img
-              src="./images\cashlesspayment.jpg"
+              src="./images/cashlesspayment.jpg"
               alt="cashlesspayment"
               width="360"
               height="300"
@@ -150,7 +152,7 @@
           </li>
           <li>
             <img
-              src="./images\meditationapp.jpg"
+              src="./images/meditationapp.jpg"
               alt="meditationapp"
               width="360"
               height="300"
@@ -160,7 +162,7 @@
           </li>
           <li>
             <img
-              src="./images\taxiservice.jpg"
+              src="./images/taxiservice.jpg"
               alt="taxiservice"
               width="360"
               height="300"
@@ -170,7 +172,7 @@
           </li>
           <li>
             <img
-              src="./images\screenillustrations.jpg"
+              src="./images/screenillustrations.jpg"
               alt="screenillustrations"
               width="360"
               height="300"
@@ -180,7 +182,7 @@
           </li>
           <li>
             <img
-              src="./images\onlinecourses.jpg"
+              src="./images/onlinecourses.jpg"
               alt="onlinecourses"
               width="360"
               height="300"
@@ -191,7 +193,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo"
         >Web<span class="logo-blue">Studio</span></a
       >
