--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
           <li class="nav-list">
             <a href="./index.html" class="nav">Studio</a>
           </li>
-          <li class="nav-list"><a href=" " class="nav">Portfolio</a></li>
-          <li class="nav-list"><a href=" " class="nav">Contacts</a></li>
+          <li class="nav-list">
+            <a href="./index.html" class="nav">Portfolio</a>
+          </li>
+          <li class="nav-list">
+            <a href="./index.html" class="nav">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="address">
@@ -45,7 +49,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
@@ -82,10 +86,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2 class="main-title-section">Our Team</h2>
         <ul>
-          <li>
+          <li сlass="team-list">
             <img
               src="./images/markguerrero.jpg"
               alt="Team Member 1"
@@ -95,7 +99,7 @@
             <h3 class="team-member">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
           </li>
-          <li>
+          <li сlass="team-list"></li>>
             <img
               src="./images/tomford.jpg"
               alt="Team Member 2"
@@ -105,7 +109,7 @@
             <h3 class="team-member">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
           </li>
-          <li>
+          <li сlass="team-list"></li>>
             <img
               src="./images/camilagarcia.jpg"
               alt="Team Member 3"
@@ -115,7 +119,7 @@
             <h3 class="team-member">Camila Garcia</h3>
             <p class="position">Marketing</p>
           </li>
-          <li>
+          <li сlass="team-list"></li>>
             <img
               src="./images/danielwilson.jpg"
               alt="Team Member 4"
@@ -195,7 +199,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="logo-blue">Studio</span></a
+        >Web<span class="logo-blue-footer">Studio</span></a
       >
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
