--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="./index.html" class="nav">Studio</a>
           </li>
           <li class="nav-list">
-            <a href="./index.html" class="nav">Portfolio</a>
+            <a href="" class="nav">Portfolio</a>
           </li>
           <li class="nav-list">
-            <a href="./index.html" class="nav">Contacts</a>
+            <a href="" class="nav">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -89,7 +89,7 @@
       <section class="team">
         <h2 class="main-title-section">Our Team</h2>
         <ul>
-          <li сlass="team-list">
+          <li class="team-list">
             <img
               src="./images/markguerrero.jpg"
               alt="Team Member 1"
@@ -99,7 +99,7 @@
             <h3 class="team-member">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
           </li>
-          <li сlass="team-list"></li>>
+          <li class="team-list">
             <img
               src="./images/tomford.jpg"
               alt="Team Member 2"
@@ -109,7 +109,7 @@
             <h3 class="team-member">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
           </li>
-          <li сlass="team-list"></li>>
+          <li class="team-list">
             <img
               src="./images/camilagarcia.jpg"
               alt="Team Member 3"
@@ -119,7 +119,7 @@
             <h3 class="team-member">Camila Garcia</h3>
             <p class="position">Marketing</p>
           </li>
-          <li сlass="team-list"></li>>
+          <li class="team-list">
             <img
               src="./images/danielwilson.jpg"
               alt="Team Member 4"
