--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="portfolio">
         <h2 class="main-title-section">Our Portfolio</h2>
         <ul>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/bankingapp.jpg"
               alt="bankingapp"
@@ -144,7 +144,7 @@
             <h3 class="portfolio-title">Banking App</h3>
             <p class="portfolio-description">App</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/cashlesspayment.jpg"
               alt="cashlesspayment"
@@ -154,7 +154,7 @@
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/meditationapp.jpg"
               alt="meditationapp"
@@ -164,7 +164,7 @@
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/taxiservice.jpg"
               alt="taxiservice"
@@ -174,7 +174,7 @@
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/screenillustrations.jpg"
               alt="screenillustrations"
@@ -184,7 +184,7 @@
             <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-description">Design</p>
           </li>
-          <li>
+          <li class="portfolio-list">
             <img
               src="./images/onlinecourses.jpg"
               alt="onlinecourses"
