--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <section class="features">
         <h2 class="main-title-section">Our Features</h2>
-        <ul>
+        <ul class="features-list">
           <li class="section1-list">
             <h3 class="title-section1">Strategy</h3>
             <p class="section1-description">
