--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
       </section>
       <section class="features">
         <h2 class="main-title-section">Our Features</h2>
-        <ul class="features-list">
-          <li class="section1-list">
-            <h3 class="title-section1">Strategy</h3>
-            <p class="section1-description">
+        <ul>
+          <li class="section-list">
+            <h3 class="title-section">Strategy</h3>
+            <p class="section-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="section1-list">
-            <h3 class="title-section1">Punctuality</h3>
-            <p class="section1-description">
+          <li class="section-list">
+            <h3 class="title-section">Punctuality</h3>
+            <p class="section-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="section1-list">
-            <h3 class="title-section1">Diligence</h3>
-            <p class="section1-description">
+          <li class="section-list">
+            <h3 class="title-section">Diligence</h3>
+            <p class="section-description">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li class="section1-list">
-            <h3 class="title-section1">Technologies</h3>
-            <p class="section1-description">
+          <li class="section-list">
+            <h3 class="title-section">Technologies</h3>
+            <p class="section-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
